refactor: 전체 프로젝트 리팩터링
- Gradle: up to 8.5, groovy -> kotlin
- Java: 8 -> 17
- Spring Boot: 2.4.0 -> 3.2.1
- Template Engine: Handlebars -> Thymeleaf
- 전체 코드 리팩터링