@@ -9,19 +9,19 @@ import com.brainbackdoor.subwaymap.favorite.dto.FavoriteResponse;
 import com.brainbackdoor.subwaymap.station.domain.Station;
 import com.brainbackdoor.subwaymap.station.domain.StationRepository;
 import com.brainbackdoor.subwaymap.station.dto.StationResponse;
-import org.springframework.stereotype.Service;
-
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import org.springframework.stereotype.Service;
 
 @Service
 public class FavoriteService {
-    private FavoriteRepository favoriteRepository;
-    private StationRepository stationRepository;
+
+    private final FavoriteRepository favoriteRepository;
+    private final StationRepository stationRepository;
 
     public FavoriteService(FavoriteRepository favoriteRepository, StationRepository stationRepository) {
         this.favoriteRepository = favoriteRepository;
@@ -29,12 +29,12 @@ public class FavoriteService {
     }
 
     public void createFavorite(LoginMember loginMember, FavoriteRequest request) {
-        Favorite favorite = new Favorite(loginMember.getId(), request.getSource(), request.getTarget());
+        Favorite favorite = new Favorite(loginMember.id(), request.source(), request.target());
         favoriteRepository.save(favorite);
     }
 
     public List<FavoriteResponse> findFavorites(LoginMember loginMember) {
-        List<Favorite> favorites = favoriteRepository.findByMemberId(loginMember.getId());
+        List<Favorite> favorites = favoriteRepository.findByMemberId(loginMember.id());
         Map<Long, Station> stations = extractStations(favorites);
 
         return favorites.stream()
@@ -42,13 +42,13 @@ public class FavoriteService {
                 it,
                 StationResponse.of(stations.get(it.getSourceStationId())),
                 StationResponse.of(stations.get(it.getTargetStationId()))))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public void deleteFavorite(LoginMember loginMember, Long id) {
         Favorite favorite = favoriteRepository.findById(id).orElseThrow(RuntimeException::new);
-        if (!favorite.isCreatedBy(loginMember.getId())) {
-            throw new HasNotPermissionException(loginMember.getId() + "는 삭제할 권한이 없습니다.");
+        if (!favorite.isCreatedBy(loginMember.id())) {
+            throw new HasNotPermissionException(loginMember.id() + "는 삭제할 권한이 없습니다.");
         }
         favoriteRepository.deleteById(id);
     }
