@@ -7,17 +7,16 @@ import com.brainbackdoor.subwaymap.line.dto.LineResponse;
 import com.brainbackdoor.subwaymap.line.dto.SectionRequest;
 import com.brainbackdoor.subwaymap.station.application.StationService;
 import com.brainbackdoor.subwaymap.station.domain.Station;
+import java.util.List;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class LineService {
-    private LineRepository lineRepository;
-    private StationService stationService;
+
+    private final LineRepository lineRepository;
+    private final StationService stationService;
 
     public LineService(LineRepository lineRepository, StationService stationService) {
         this.lineRepository = lineRepository;
@@ -25,17 +24,18 @@ public class LineService {
     }
 
     public LineResponse saveLine(LineRequest request) {
-        Station upStation = stationService.findById(request.getUpStationId());
-        Station downStation = stationService.findById(request.getDownStationId());
-        Line persistLine = lineRepository.save(new Line(request.getName(), request.getColor(), upStation, downStation, request.getDistance()));
+        Station upStation = stationService.findById(request.upStationId());
+        Station downStation = stationService.findById(request.downStationId());
+        Line persistLine = lineRepository.save(
+            new Line(request.name(), request.color(), upStation, downStation, request.distance()));
         return LineResponse.of(persistLine);
     }
 
     public List<LineResponse> findLineResponses() {
         List<Line> persistLines = lineRepository.findAll();
         return persistLines.stream()
-                .map(LineResponse::of)
-                .collect(Collectors.toList());
+            .map(LineResponse::of)
+            .toList();
     }
 
     public List<Line> findLines() {
@@ -54,7 +54,7 @@ public class LineService {
 
     public void updateLine(Long id, LineRequest lineUpdateRequest) {
         Line persistLine = lineRepository.findById(id).orElseThrow(RuntimeException::new);
-        persistLine.update(new Line(lineUpdateRequest.getName(), lineUpdateRequest.getColor()));
+        persistLine.update(new Line(lineUpdateRequest.name(), lineUpdateRequest.color()));
     }
 
     public void deleteLineById(Long id) {
@@ -63,9 +63,9 @@ public class LineService {
 
     public void addLineStation(Long lineId, SectionRequest request) {
         Line line = findLineById(lineId);
-        Station upStation = stationService.findStationById(request.getUpStationId());
-        Station downStation = stationService.findStationById(request.getDownStationId());
-        line.addLineSection(upStation, downStation, request.getDistance());
+        Station upStation = stationService.findStationById(request.upStationId());
+        Station downStation = stationService.findStationById(request.downStationId());
+        line.addLineSection(upStation, downStation, request.distance());
     }
 
     public void removeLineStation(Long lineId, Long stationId) {
