@@ -4,16 +4,15 @@ import com.brainbackdoor.subwaymap.station.domain.Station;
 import com.brainbackdoor.subwaymap.station.domain.StationRepository;
 import com.brainbackdoor.subwaymap.station.dto.StationRequest;
 import com.brainbackdoor.subwaymap.station.dto.StationResponse;
+import java.util.List;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class StationService {
-    private StationRepository stationRepository;
+
+    private final StationRepository stationRepository;
 
     public StationService(StationRepository stationRepository) {
         this.stationRepository = stationRepository;
@@ -29,8 +28,8 @@ public class StationService {
         List<Station> stations = stationRepository.findAll();
 
         return stations.stream()
-                .map(StationResponse::of)
-                .collect(Collectors.toList());
+            .map(StationResponse::of)
+            .toList();
     }
 
     public void deleteStationById(Long id) {
